Updated formatting on HTML

--- a/Hierarchical Reconciliation.ipynb
+++ b/Hierarchical Reconciliation.ipynb
@@ -922,13 +922,13 @@
     "\n",
     "<img src = 'images/tsCV.jpg'>\n",
     "\n",
-    "<h4><center> R. Hyndman, \"Forecasting: Principles and Practice\", Section 5.10 </h4></center>\n",
+    "<h4 align = 'center'> R. Hyndman, \"Forecasting: Principles and Practice\", Section 5.10 </h4>\n",
     "\n",
     "In the above diagram, we can think of every row as a training/validation split where blue dots represent our training set, red dots our validation set, and grey dots are excluded from that iteration. We start the process by declaring the minimum size of our training set, then repeat this process by increasing the size of our training set each time by a step size. In the above diagram, Hyndman starts with 6 observations in his training set and increases his training set by 1 in each iteration.\n",
     "\n",
     "<img src = 'images/tsCV2.JPG'>\n",
     "\n",
-    "<h4><center> R. Hyndman, \"Forecasting: Principles and Practice\", Section 5.10 </h4></center>\n",
+    "<h4 align = 'center'> R. Hyndman, \"Forecasting: Principles and Practice\", Section 5.10 </h4>\n",
     "\n",
     "We can also change how far out of a time horizon we want to forecast. In the first diagram, we were using the next observation (one period) after our training set as our validation set. In the above example, Hyndman uses the 4th oversation after the training set. If we are interested in a model that predicts 4 periods from our current time, we may opt for a time horizon of 4 instead of one when selecting our final model.\n",
     "\n",
